--- a/.gitignore
+++ b/.gitignore
@@ -58,7 +58,6 @@ coverage.xml
 *.log
 local_settings.py
 db.sqlite3
-
 # Flask stuff:
 instance/
 .webassets-cache
@@ -124,3 +123,4 @@ dmypy.json
 # working files
 input
 output
+settings.py
